# mage-shooter

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: ComponentsArray.cpp  ComponentsArray.h  ComponentsManager.cpp  ComponentsManager.h  Coordinator.cpp  Coordinator.h  EntityManager.cpp  EntityManager.h  GameManager.cpp  GameManager.h  GlobalConfig.h  Level.h  Player.cpp  Player.h  Shape.cpp  Shape.h  SystemManager.cpp  SystemManager.h  Types.h  Unit.h  main.cpp
src/components/: Direction.h  Input.h  PhysicsBody.h  Player.h  Transform.h  Velocity.h
src/systems/: DrawSystem.cpp  DrawSystem.h  InputSystem.cpp  InputSystem.h  MovementSystem.cpp  MovementSystem.h  System.cpp  System.h  SystemFactory.cpp  SystemFactory.h
